# etuf

./: Cargo.toml  README.md  rustfmt.toml
examples/: minimal_client_server.rs  ping_pong.rs  server_with_auth.rs
src/: lib.rs  version.rs
src/client/: definition.rs  mod.rs  target_addr.rs
src/protocol/: crypto.rs  mod.rs  packet.rs  read.rs  write.rs
src/protocol/packets/: auth_request.rs  auth_response.rs  client_greet.rs  command_request.rs  command_response.rs  mod.rs  public_key_exchange.rs  server_greet.rs
src/protocol/types/: auth.rs  auth_method.rs  auth_status.rs  client_command.rs  command_status.rs  mod.rs
src/server/: connection.rs  definition.rs  mod.rs
tests/: client_with_auth.rs  server_with_auth.rs  simple_interact.rs
