[package]
name = "etuf"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"
description = "A fast and secure protocol. Built-in client and server implementation."
repository = "https://github.com/nullclyze/etuf"
documentation = "https://docs.rs/etuf/latest/"

[dependencies]
bytes = "1.11.1"
tokio = { version = "1.52.3", features = ["net", "sync", "time", "io-util", "rt", "macros"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
x25519-dalek = "2.0"
hashbrown = "0.17.1"

[dev-dependencies]
etuf = { path = ".", features = ["all"] }
tokio = { version = "1.52.3", features = ["full"] }

[features]
client = []
server = []
default = []
all = ["client", "server"]